--- a/AI/AI.vcxproj
+++ b/AI/AI.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Abductor.cpp" />
     <ClCompile Include="AlienNest.cpp" />
     <ClCompile Include="Astronaut.cpp" />
+    <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="Abductor.h" />
     <ClInclude Include="AlienNest.h" />
     <ClInclude Include="Astronaut.h" />
+    <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="ConstHolder.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
