Meteor + Super Jump power done. Collision done between; Projectiles and meteors, Projectiles and player, Player and meteors, player and power ups.. Started on Alien Nest and Interceptors

--- a/AI/AI.vcxproj.filters
+++ b/AI/AI.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClCompile Include="CollisionManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Vector2Calculator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Interceptor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -105,6 +111,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CollisionManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Vector2Calculator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Interceptor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
