--- a/AI/AI.vcxproj
+++ b/AI/AI.vcxproj
@@ -144,12 +144,14 @@
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Interceptor.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Meteor.cpp" />
     <ClCompile Include="Mutant.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PowerUp.cpp" />
     <ClCompile Include="Projectile.cpp" />
+    <ClCompile Include="Vector2Calculator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Abductor.h" />
@@ -159,6 +161,7 @@
     <ClInclude Include="ConstHolder.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Interceptor.h" />
     <ClInclude Include="Meteor.h" />
     <ClInclude Include="Mutant.h" />
     <ClInclude Include="Player.h" />
@@ -167,6 +170,7 @@
     <ClInclude Include="ResourceHolder.h" />
     <ClInclude Include="ResourceIdentifiers.h" />
     <ClInclude Include="StringHelpers.h" />
+    <ClInclude Include="Vector2Calculator.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ResourceHolder.inl" />
