--- a/AI/AI.vcxproj
+++ b/AI/AI.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="AlienNest.cpp" />
     <ClCompile Include="Astronaut.cpp" />
     <ClCompile Include="Boid.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="Flock.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="AlienNest.h" />
     <ClInclude Include="Astronaut.h" />
     <ClInclude Include="Boid.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="ConstHolder.h" />
     <ClInclude Include="Flock.h" />
