--- a/AI/AI.vcxproj
+++ b/AI/AI.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="HUD.cpp" />
     <ClCompile Include="Interceptor.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Meteor.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="ConstHolder.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="HUD.h" />
     <ClInclude Include="Interceptor.h" />
     <ClInclude Include="Meteor.h" />
     <ClInclude Include="Mutant.h" />
